[package]
name = "meltos"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/MlUlM/meltos"

[workspace]
members = [
    "meltos_branch",
    "meltos_cli",
    "meltos_core",
    "meltos_discussion",
    "meltos_fs",
    "meltos_room",
    "meltos_server"
]

[dependencies]
tar = "0.4.40"
meltos_core = { path = "meltos_core" }

[workspace.dependencies]
async-trait = "0.1.74"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_bytes = "0.11.12"
thiserror = "1.0.50"
anyhow = "1.0.75"
auto-delegate = "0.0.9"
