[workspace]
members = [
    "crates/*",
]


[workspace.dependencies]
async-trait = "0.1.74"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_bytes = "0.11.12"
thiserror = "1.0.50"
anyhow = "1.0.75"
auto-delegate = "0.0.9"
axum = "0.7.2"
webrtc = "0.9.0"
