[workspace]
members = [
    "crates/*",
    "net/*",
    "meltos_tool"
]
resolver = "2"


[workspace.dependencies]
auto-delegate = "0.0.9"
async-trait = "0.1.74"
tokio = { version = "1.34.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_bytes = "0.11.12"
thiserror = "1.0.50"
anyhow = "1.0.75"
axum = { version = "0.7.2", features = ["ws"] }
webrtc = "0.9.0"
futures = "0.3.29"
meltos_util = { path = "./crates/meltos_util" }
reqwest = { version = "0.11.22", features = ["json"] }
