[package]
name = "meltos_cli"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
ratatui = "0.24.0"
crossterm = "0.27.0"
unreachable = "1.0.0"
meltos_tui = { path = "../ui/meltos_tui" }
meltos_thread = { path = "../crates/meltos_thread" }
tokio = { workspace = true }