[package]
name = "meltos_common"
version = "0.1.0"
edition = "2021"


[dependencies]
flate2 = { version = "1.0.28" }
tar = "0.4.40"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
bincode = "1.3.3"
serde_bytes = "0.11.12"
futures = "0.3.29"
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }