[package]
name = "meltos_fs"
version = "0.1.0"
edition = "2021"


[dependencies]
flate2 = { version = "1.0.28" }
tar = "0.4.40"
bincode = "1.3.3"
meltos_core = { path = "../meltos_core" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
futures = "0.3.29"
tokio = { workspace = true }