[package]
name = "meltos_server"
version = "0.1.0"
edition = "2021"

[dependencies]
http-body-util = "0.1.0"

log = "0.4.20"
meltos_util = { path = "../crates/meltos_util" }
meltos = { path = "../crates/meltos" }
meltos_backend = { path = "../crates/meltos_backend" }
meltos_tvc = { path = "../crates/meltos_tvc" }
axum-extra = { version = "0.9.0", features = ["cookie", "typed-routing"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
console-subscriber = "0.2.0"
auto-delegate = { workspace = true }
tokio = { version = "1.34.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.14", features = ["sync"]}
tokio-tungstenite = { version = "0.21.0" }
tower = { version = "0.4.13" }
tower-http = { version = "0.5.0", features = ["limit", "decompression-br"] }
tracing = { version = "0.1.40" }
axum = { version = "0.7.4", features = [] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
futures = { version = "0.3.30" }
thiserror = { version = "1.0.56" }
config = { version = "0.13.4", features = ["toml"] }
tracing-appender = "0.2.3"
strum = { version = "0.26.1", features = ["derive"] }