[package]
name = "meltos_tool"
version = "0.1.0"
edition = "2021"


[dependencies]
meltos = { path = "../crates/meltos" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { version = "0.11.22", features = ["json"] }
meltos_tvc = { path = "../crates/meltos_tvc" }
futures = "0.3.29"
bincode = "1.3.3"