[package]
name = "meltos"
version = "0.1.0"
edition = "2021"

[dependencies]
sha1_smol = "1.0.0"
bincode = "1.3.3"
uuid = { version = "1.6.1", features = ["v4"] }
meltos_util = { path = "../meltos_util" }
meltos_tvn = { path = "../meltos_tvn" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
wasm-bindgen = { workspace = true }