[package]
name = "meltos_backend"
version = "0.1.0"
edition = "2021"


[dependencies]
meltos = { path = "../meltos" }
meltos_util = { path = "../meltos_util" }
meltos_tvc = { path = "../meltos_tvc" }

serde_json = { workspace = true }
auto-delegate = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.34.0", features = ["full", "tracing"] }
axum = { workspace = true }
rusqlite = { version = "0.30.0", features = ["bundled"] }


[dev-dependencies]
futures = { version = "0.3.30", features = [] }