[package]
name = "meltos_tvn"
version = "0.1.0"
edition = "2021"


[dependencies]

meltos_util = { path = "../meltos_util" }
reqwest = { version = "0.11.22", features = ["json"] }
async-trait = { workspace = true }
auto-delegate = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = "0.4.20"

[dev-dependencies]
tokio = { workspace = true }
