[package]
name = "meltos_util"
version = "0.1.0"
edition = "2021"


[dependencies]
bincode = "1.3.3"
flate2 = { version = "1.0.28" }
meltos_macros = { path = "../meltos_macros" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
log = "0.4.20"

thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }

[features]
default = []
tokio = ["dep:tokio"]
async-trait = ["dep:async-trait"]