[package]
name = "meltos_util"
version = "0.1.0"
edition = "2021"


[dependencies]
bincode = "1.3.3"
flate2 = { version = "1.0.28" }
meltos_macros = { path = "../meltos_macros" }
log = "0.4.20"
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1_smol = "1.0.0"
uuid = { version = "1.6.1", features = ["v4"] }


