[package]
name = "meltos_server"
version = "0.1.0"
edition = "2021"


[dependencies]
http-body-util = "0.1.0"

log = "0.4.20"
meltos_util = { path = "../../crates/meltos_util" }
meltos = { path = "../../crates/meltos" }
meltos_backend = { path = "../../crates/meltos_backend" }
axum-extra = { version = "0.9.0", features = ["cookie", "typed-routing"] }

auto-delegate = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true, features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }



