[package]
name = "meltos_signal"
version = "0.1.0"
edition = "2021"


[dependencies]
meltos_util = { path = "../../crates/meltos_util", features = ["tokio"] }
meltos = { path = "../../crates/meltos" }
tokio = { workspace = true }
axum = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
webrtc = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
auto-delegate = { workspace = true }
http = { version = "1.0.0", features = [] }
http-body-util = "0.1.0"
mime = "0.3.17"
serde_json = { version = "1.0.108", features = [] }
tower = { workspace = true }
sha1_smol = "1.0.0"
futures = { workspace = true }
